# solana-indexer

./: .env  Cargo.toml
migrations/: 20230220185530_wallets.sql  20230220185758_balances.sql
scripts/: init_db.sh
src/: configuration.rs  db.rs  lib.rs  main.rs  rpc_client.rs
src/chains/: solana.rs  types.rs
